--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "remaster",
-  "version": "0.0.6",
-  "description": "Redux generator prototype (pls help to fix it)",
-  "main": "build/index.js",
+  "version": "1.0.0",
+  "description": "Redux generator",
+  "main": "index.js",
   "peerDependencies": {
-    "redux": "^4.0.1"
+    "redux": "4.0.1"
   },
   "dependencies": {
-    "redux": "^4.0.1"
+    "redux": "4.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,5 +22,9 @@
     "name": "Kauê da Maia",
     "email": "kaue@ruptiva.com"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "4.34.0",
+    "webpack-cli": "3.3.4"
+  }
 }
